<resources>
    <string name="app_name">Moral</string>

    <!-- Common -->
    <string name="no_internet">No Internet</string>

    <!-- Login Activity -->
    <string name="login_title">Login</string>
    <string name="student_id_or_teacher_id">Student Id or Teacher Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="student_id_or_teacher_id_must_10">Student Id or Teacher Id must be 10</string>
    <string name="password_not_empty">Password must be not empty</string>
    <string name="id_or_password_wrong">Id or Password is wrong</string>

    <!-- Moral Looking -->
    <string name="moral_looking_title">Moral Looking</string>
    <string name="student_id_is">Student Id is %1$s</string>
    <string name="moral_is">Total Moral Point is: %1$s</string>
    <string name="grade_is">Moral Grade is: %1$s</string>
    <string name="log_out">Log out</string>

    <!-- Look Student Moral -->
    <string name="look_student_moral_title">Look Student Moral</string>
    <string name="student_id">Student Id</string>
    <string name="look">Look</string>
    <string name="student_id_not_null">Student Id cannot be Null</string>
    <string name="no_student">No such student</string>
</resources>
